--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Nevin's Website</title>
-    <script src="script.js">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>GOTY</title>
+    <meta name="description" content="What Is Game Of The Year 2022?">
+    <meta name="keywords" content="Game Of The Year GOTY">
+    <script src="./js/script.js"></script>
+
+    <!-- Custom Theme -->
+    <link rel="stylesheet" href="./css/theme.css">
+
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <div id="app" data-theme="dark">
+
+      <!-- Universal Nav bar -->
+      <nav class="mainnav">
+        <button id="ThemeChange" class="themechanger">☀️</button>
+        <a href="https://thegameawards.com/nominees/game-of-the-year" target="_blank">0:00 Until GOTY</a>
+      </nav>
+
+
+    </div>
   </body>
 </html>
