Added The Main 4 Pages + Changed Up Nav Menu For Each

--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
         <button id="ThemeChange" class="themechanger">☀️</button>
         <!-- Hover / Drop down -->
         <div class="dropdown">
-          <button class="dropbtn">Home</button>
+          <button class="dropbtn">About</button>
           <div class="dropdown-content">
-            <a href="./about.html">About</a>
+            <a href="./index.html">Home</a>
             <a href="./entries.html">Entries / Contestents</a>
             <a href="./prediction.html">Our Predictions</a>
           </div>
