--- a/prediction.html
+++ b/prediction.html
@@ -19,11 +19,11 @@
         <button id="ThemeChange" class="themechanger">☀️</button>
         <!-- Hover / Drop down -->
         <div class="dropdown">
-          <button class="dropbtn">Home</button>
+          <button class="dropbtn">Our Predictions</button>
           <div class="dropdown-content">
+            <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./entries.html">Entries / Contestents</a>
-            <a href="./prediction.html">Our Predictions</a>
           </div>
         </div>
 
