--- a/entries.html
+++ b/entries.html
@@ -19,10 +19,10 @@
         <button id="ThemeChange" class="themechanger">☀️</button>
         <!-- Hover / Drop down -->
         <div class="dropdown">
-          <button class="dropbtn">Home</button>
+          <button class="dropbtn">Entries / Contestents</button>
           <div class="dropdown-content">
+            <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
-            <a href="./entries.html">Entries / Contestents</a>
             <a href="./prediction.html">Our Predictions</a>
           </div>
         </div>
