Added Footers to all pages

--- a/about.html
+++ b/about.html
@@ -33,6 +33,10 @@
       </nav>
 
 
+
+      <footer class="footer">
+        <p>&copy; Nevin Hyunh 2022</p>
+      </footer>
     </div>
   </body>
 </html>
