--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         <a id="cdt" class="hover-underline-animation" href="https://thegameawards.com/" target="_blank">0:00 Until GOTY</a>
       </nav>
 
+      <iframe class="embed" width="400" height="225" src="https://www.youtube.com/embed/oPYCtbRfuok" title="The Game Awards 2022 Nominations Livestream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+      <footer class="footer">
+        <p>&copy; Nevin Hyunh 2022</p>
+      </footer>
     </div>
   </body>
 </html>
