Added All Four Pages + Video

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="dropdown-content">
             <a href="./about.html">About</a>
             <a href="./entries.html">Entries / Contestents</a>
-            <a href="./prediction.html">Our Predictions</a>
+            <a href="./hm.html">Honorable Mentions</a>
           </div>
         </div>
 
@@ -35,7 +35,7 @@
       <iframe class="embed" width="400" height="225" src="https://www.youtube.com/embed/oPYCtbRfuok" title="The Game Awards 2022 Nominations Livestream" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <footer class="footer">
-        <p>&copy; Nevin Hyunh 2022</p>
+        <p>&copy; Nevin Huynh 2022</p>
       </footer>
     </div>
   </body>
