--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <!-- Custom Theme -->
     <link rel="stylesheet" href="./css/theme.css">
-
+    <link rel="stylesheet" href="./css/carasoule.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -23,7 +23,7 @@
           <div class="dropdown-content">
             <a href="./index.html">Home</a>
             <a href="./entries.html">Entries / Contestents</a>
-            <a href="./prediction.html">Our Predictions</a>
+            <a href="./hm.html">Honorable Mentions</a>
           </div>
         </div>
 
@@ -33,9 +33,86 @@
       </nav>
 
 
+      <div class="root">
+        <!-- carasoule -->
+        <div class="carasoule N">
+          <div class="slideTrack NM">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+          <div class="slideTrack NM">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+          <div class="slideTrack NM">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+          <div class="slideTrack NM">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+        </div>
+
+        <video autoplay muted loop style="user-select: none; width: 100%; height: auto;" src="./videos/GOTY.webm"></video>
+
+
+        <div class="carasoule RC bottomC">
+          <div class="slideTrack RC">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+          <div class="slideTrack RC">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+          <div class="slideTrack RC">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+          <div class="slideTrack RC">
+            <li>Stray</li>
+            <li>A Plague Tale: Requiem</li>
+            <li>Horizon Forbidden West</li>
+            <li>Xenoblade Chronicles 3</li>
+            <li>Elden Ring</li>
+            <li>God of War Ragnarök</li>
+          </div>
+        </div>
+
+      </div>
+
 
       <footer class="footer">
-        <p>&copy; Nevin Hyunh 2022</p>
+        <p>&copy; Nevin Huynh 2022</p>
       </footer>
     </div>
   </body>
