--- a/entries.html
+++ b/entries.html
@@ -9,6 +9,7 @@
     <!-- Custom Theme -->
     <link rel="stylesheet" href="./css/theme.css">
 
+    <link rel="stylesheet" href="./css/carasoule.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -23,7 +24,7 @@
           <div class="dropdown-content">
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
-            <a href="./prediction.html">Our Predictions</a>
+            <a href="./hm.html">Honorable Mentions</a>
           </div>
         </div>
 
@@ -32,10 +33,31 @@
         <a id="cdt" class="hover-underline-animation" href="https://thegameawards.com/" target="_blank">0:00 Until GOTY</a>
       </nav>
 
+      <div class="root">
+        <div class="Bcarasoule">
+          <div class="slideTrack gridphotos">
+            <img src="./imgs/GOWR.jpg">
+            <img src="./imgs/EldenRing.webp">
+            <img src="./imgs/HorizonForbiddenWest.jpg">
+            <img src="./imgs/Stray.jpg">
+            <img src="./imgs/XBC3.webp">
+            <img src="./imgs/APR.webp">
+          </div>
+          <div class="slideTrack gridphotos">
+            <img src="./imgs/GOWR.jpg">
+            <img src="./imgs/EldenRing.webp">
+            <img src="./imgs/HorizonForbiddenWest.jpg">
+            <img src="./imgs/Stray.jpg">
+            <img src="./imgs/XBC3.webp">
+            <img src="./imgs/APR.webp">
+          </div>
+      </div>
 
+
+    </div>
 
       <footer class="footer">
-        <p>&copy; Nevin Hyunh 2022</p>
+        <p>&copy; Nevin Huynh 2022</p>
       </footer>
     </div>
   </body>
